  to define the operator for matching strings (LIKE in most cases), hash Wice::Defaults::STRING_MATCHING_OPERATORS
  was added to specify string matching operators on per-database basis:

    Wice::Defaults::STRING_MATCHING_OPERATORS = {
      'ActiveRecord::ConnectionAdapters::MysqlAdapter' => 'LIKE',
      'ActiveRecord::ConnectionAdapters::PostgreSQLAdapter' => 'ILIKE'
    }

A use-case for this is a Rails application connecting to two databases, one of which is MySQL, and the other is Postgresql.
To use case-insensitive matching in Postgresql 'ILIKE' has to be used, but this operator is unknown to MySQL.

* :td_html_attrs in column definitions and table_html_attrs in the table definitions are mostly used to add
   css classes, so a shorter way has been added to add css classes.

  Instead of 
  
    <%= grid(@grid, :table_html_attrs => {:class => 'css_class1'}) do |g|
        g.column(:td_html_attrs => {:class => 'css_class2'}) do
        end
    end -%>
    
  It's possible to just use the new <tt>:class</tt> option:
  
  <%= grid(@grid, :class => 'css_class1') do |g|
      g.column(:class => 'css_class2') do
      end
  end -%>
  

* Blank slate feature: it is now possible to replace the grid with some alternative view if no filters are active
  and there are no records to render:
  
    <%= grid(@grid) do |g|
    
      g.blank_slate  do
        "There are no records"
      end
  
      g.column  do |product|
         ...
      end
     end  -%>
  
  There are two alternative three ways to do the same:
  
  *   <tt>g.blank_slate "some text to be rendered"</tt>
  *   <tt>g.blank_slate :partial => "partial_name"</tt>

* Copying asset files is now done by a plugin generator, not rake tasks:

       ./script/generate wice_grid_assets

* Improvement to custom filters, namely to
    :custom => :symbol
  and
    :custom => [:symbol1, :symbol2, symbol3]
  flavors: if the last method returns an array of 2 elements, the first element becomes